--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="header__menu menu">
                     <ul class="menu__list">
                         <li class="menu__items"><a class="menu__link menu__link-active" href="#">Главная</a></li>
-                        <li class="menu__items"><a class="menu__link" href="#">Услуги</a></li>
+                        <li class="menu__items"><a class="menu__link" href="service.html">Услуги</a></li>
                         <li class="menu__items"><a class="menu__link" href="#">Отзывы</a></li>
                     </ul>
                 </div>
