--- a/service.html
+++ b/service.html
@@ -23,9 +23,9 @@
                 </div>
                 <div class="header__menu menu">
                     <ul class="menu__list">
-                        <li class="menu__items"><a class="menu__link menu__link-active" href="index.html">Главная</a></li>
-                        <li class="menu__items"><a class="menu__link" href="#">Услуги</a></li>
-                        <li class="menu__items"><a class="menu__link" href="#">Отзывы</a></li>
+                        <li class="menu__items"><a class="menu__link" href="index.html">Главная</a></li>
+                        <li class="menu__items"><a class="menu__link menu__link-active" href="#">Услуги</a></li>
+                        <li class="menu__items"><a class="menu__link" href="reviews.html">Отзывы</a></li>
                     </ul>
                 </div>
                 <div class="header__contacts contacts">
