--- a/reviews.html
+++ b/reviews.html
@@ -213,7 +213,7 @@
                             <input type="text" class="form__name" placeholder="Ввведите имя">
                             <input type="text" class="form__social" placeholder="Ссылка на профиль VK">
                         </div>
-                        <div class="form__row form__row__textarea">
+                        <div class="form__row form__row-textarea">
                             <textarea class="form__textarea" placeholder="Напишите свой честный отзыв ;)"></textarea>
                         </div>
                         <div class="form__tags">
