--- a/reviews.html
+++ b/reviews.html
@@ -42,6 +42,7 @@
                     </div>
                 </div>
             </header>
+
             <!-- ------------------------ title ------------------------ -->
             <div class="content-title">
                 <h1 class="content-title__main">Отзывы</h1>
@@ -217,8 +218,8 @@
                             <textarea class="form__textarea" placeholder="Напишите свой честный отзыв ;)"></textarea>
                         </div>
                         <div class="form__tags">
-                            <div class="form__tags__title">Какими услугами компании пользуетесь?</div>
-                            <div class="form__tags__tags-name">
+                            <div class="form__tags-title">Какими услугами компании пользуетесь?</div>
+                            <div class="form__tags-tags-name">
                                 <ul class="form__tags__tags-name__list">
                                     <li class="form__tags__tags-name__item">
                                         <label class="">
